freest/test/prog/Invalid/Typing/WildcardFun/WildcardFun.fst
module WildcardFun where

_ : Int -> Int
_ x = x

main : Int
main = 3
